apps/ai-cluster/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    ztp-modernization-factory: "true"
